// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValue renders custom formatted values 1`] = `
<div
  className="common__keyvalue"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="key1"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key1
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        Feb 01, 2009 02:53 am
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="key2"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key2
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        Yes
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="key3"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key3
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        3
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`KeyValue renders default values 1`] = `
<div
  className="common__keyvalue"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="key1"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key1
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        1
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="key2"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key2
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        2
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="key3"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key3
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        3
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`KeyValue renders ordered formatted values 1`] = `
<div
  className="common__keyvalue"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="0"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key2
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        2
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="1"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key1
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        1
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="2"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        Size
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        3 bytes
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`KeyValue renders ordered values 1`] = `
<div
  className="common__keyvalue"
>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="0"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key2
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        2
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="1"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key1
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        1
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    key="2"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={8}
    >
      <div
        className="key"
      >
        key3
      </div>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={4}
    >
      <div
        className="value"
      >
        3
      </div>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;
